--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <h2 id="heading">Counter App</h2>
         <h1 id="count">0</h1>
             <div id="buttons-and-input">
                 <button onclick="increment_1()" class="button-style"> + 1 </button>
